--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h1>Traveller</h1>
         </div>
         <ul>
-          <li><a href="./travel_recommendation.html" id="home">Home </a></li>
+          <li><a href="./index.html" id="home">Home </a></li>
           <li><a href="./about.html" id="about">About Us </a></li>
           <li><a href="./contact.html" id="contact">Contact Us </a></li>
         </ul>
