Change btns style

--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
         </ul>
         <ul class="search-ul">
           <li><input type="text" id="searchInput" placeholder="Enter a destination or keyword">  </li>
-          <li><button id='btnSearch'>Search</button></li>
-          <li><button id='btnClear'>Clear</button></li>
+            <li><button id='btnSearch' class="book-btn">Search</button></li>
+            <li><button id='btnClear' class="book-btn">Clear</button></li>
         </ul>
     </nav>
     <div class="home-div">
